<?xml version="1.0"?>
<package format="2">
  <name>ros_syren</name>
  <version>0.1.0</version>
  <description>ROS driver for the SyRen 10 and SyRen 25 Motor Controllers</description>

  <author email="mechatrocity@gmail.com">Jeffrey Gorchynski</author>
  <maintainer email="mechatrocity@gmail.com">Jeffrey Gorchynski</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="repository">https://github.com/mechatrocity/ros_syren</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
